@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class TableTypeController {
    - _tableTypeRepositories: ITableTypeRepositories
    + GetTableTypeById(Guid id): Task<IActionResult>
}

interface ITableTypeRepositories<<interface>> {
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO>
}

class TableTypeRepositories {
    - _tableTypeDao: TableTypeDAO
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO>
}

class TableTypeDAO {
    - _client.From<TableType> : ISupabaseTable<TableType>
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO>
}

class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableTypeController
TableTypeController -- ITableTypeRepositories
ITableTypeRepositories <|-- TableTypeRepositories
TableTypeRepositories "1"--"1..*" TableTypeDAO
TableTypeDAO "1"--"0..*" TableType
@enduml
